✨ feat - Update structure to pathfinders documents

--- a/001pathfinders_messenger.html
+++ b/001pathfinders_messenger.html
@@ -9,7 +9,7 @@ banner:
     title: page.messenger.banner.title
     image: "/assets/banner/banner.jpg"
 card:
-    thumbnail: "/assets/pages/pathfinders/messenger/banner.png"
+    thumbnail: "/assets/pages/pathfinders/messenger/thumb.jpeg"
     title: page.messenger.title
     subtitle: page.messenger.subtitle    
 posters: messenger
@@ -17,4 +17,4 @@ collection: messenger
 per_page: 1
 ---
 
-A página para as crônicas...
+Mensageiro
