--- a/001pathfinders_books.html
+++ b/001pathfinders_books.html
@@ -9,7 +9,7 @@ banner:
     title: page.books.banner.title
     image: "/assets/banner/banner.jpg"
 card:
-    thumbnail: "/assets/pages/pathfinders/books/banner.png"
+    thumbnail: "/assets/pages/pathfinders/books/thumb.jpeg"
     title: page.books.title
     subtitle: page.books.subtitle
 posters: books
@@ -17,4 +17,4 @@ collection: books
 per_page: 1
 ---
 
-O resumo de livros.
+Livros.
