✨ feat - Add video banner support

--- a/000index.html
+++ b/000index.html
@@ -10,6 +10,7 @@ permalink: "/"
 banner:
     title: core.name
     image: "/assets/pages/index/banner.jpg"
+    video: "/assets/pages/index/banner.mp4"
 ---
 
 <!-- Seção de estilo de vida -->
