✨ feat - Update banner controls

--- a/000index.html
+++ b/000index.html
@@ -1,14 +1,16 @@
 ---
 layout: default
-title: page.index.title
-subtitles: [
-    page.index.subtitles.one,
-    page.index.subtitles.two,
-    page.index.subtitles.three
-]
 permalink: "/"
+site:
+    title: page.index.title
 banner:
+    type: full
     title: core.name
+    subtitles: [
+        page.index.subtitles.one,
+        page.index.subtitles.two,
+        page.index.subtitles.three
+    ]
     image: "/assets/pages/index/banner.jpg"
     video: "/assets/pages/index/banner.mp4"
 ---
