--- a/001pathfinders.html
+++ b/001pathfinders.html
@@ -1,16 +1,18 @@
 ---
 layout: default
-code: "CV1sgefOykWhD2xNDn7pLQ"
-title: page.pathfinders.title
-subtitle: page.pathfinders.subtitle
 permalink: "/desbravadores/"
 permalink_us: "/pathfinders/"
+site:
+    title: page.pathfinders.title
 menu:
     enabled: true
     title: page.pathfinders.title_menu
 banner:
+    type: full
     title: page.pathfinders.title
+    subtitle: page.pathfinders.subtitle
     image: "/assets/pages/pathfinders/banner.jpg"
+code: "CV1sgefOykWhD2xNDn7pLQ"
 card:
     thumbnail: "/assets/pages/pathfinders/banner.jpg"
     title: page.pathfinders.title
