--- a/001pathfinders_books.html
+++ b/001pathfinders_books.html
@@ -1,13 +1,15 @@
 ---
 layout: default
-code: "AqcovmdNK0i8TPeRxCbEsQ"
-title: page.books.title
-subtitle: page.books.subtitle
 permalink: "/desbravadores/livros/"
 permalink_us: "/pathfinders/books/"
+site:
+    title: page.books.title
 banner:
-    title: page.books.banner.title
-    image: "/assets/banner/banner.jpg"
+    type: none
+    title: page.books.title
+    subtitle: page.books.subtitle
+    image: "/assets/pages/pathfinders/books/thumb.jpeg"
+code: "AqcovmdNK0i8TPeRxCbEsQ"
 card:
     thumbnail: "/assets/pages/pathfinders/books/thumb.jpeg"
     title: page.books.title
@@ -17,4 +19,4 @@ collection: books
 per_page: 1
 ---
 
-Livros.
+Livros
