--- a/001pathfinders_honors.html
+++ b/001pathfinders_honors.html
@@ -1,13 +1,15 @@
 ---
 layout: default
-code: "9SdSwMIzkE6SeWyf0eqcHg"
-title: page.honors.title
-subtitle: page.honors.subtitle
 permalink: "/desbravadores/especialidades/"
 permalink_us: "/pathfinders/honors/"
+site:
+    title: page.honors.title
 banner:
-    title: page.honors.banner.title
-    image: "/assets/banner/banner.jpg"
+    type: none
+    title: page.honors.title
+    subtitle: page.honors.subtitle
+    image: "/assets/pages/pathfinders/honors/thumb.jpeg"
+code: "9SdSwMIzkE6SeWyf0eqcHg"
 card:
     thumbnail: "/assets/pages/pathfinders/honors/thumb.jpeg"
     title: page.honors.title
@@ -17,4 +19,4 @@ collection: honors
 per_page: 1
 ---
 
-Especialidades.
+Especialidades
