--- a/001pathfinders_messenger.html
+++ b/001pathfinders_messenger.html
@@ -1,13 +1,15 @@
 ---
 layout: default
-code: "5L67Ledq8Uy2nU48J5RSyg"
-title: page.messenger.title
-subtitle: page.messenger.subtitle
 permalink: "/desbravadores/mensageiro/"
 permalink_us: "/pathfinders/messenger/"
+site:
+    title: page.messenger.title
 banner:
-    title: page.messenger.banner.title
-    image: "/assets/banner/banner.jpg"
+    type: none
+    title: page.messenger.title
+    subtitle: page.messenger.subtitle
+    image: "/assets/pages/pathfinders/messenger/thumb.jpeg"
+code: "5L67Ledq8Uy2nU48J5RSyg"
 card:
     thumbnail: "/assets/pages/pathfinders/messenger/thumb.jpeg"
     title: page.messenger.title
