--- a/000index.html
+++ b/000index.html
@@ -28,3 +28,17 @@ banner:
 {% include cards/startSectionCard.html title=section_lifestyle_title subtitle=section_lifestyle_subtitle %}
     {% include cards/thumbnailPageCard.html code="CV1sgefOykWhD2xNDn7pLQ" %}
 {% include cards/endSectionCard.html %}
+
+<!-- Aplicativos -->
+
+{% capture section_lifestyle_title %}
+    {% translate page.index.sections.lifestyle.title %}
+{% endcapture %}
+
+{% capture section_lifestyle_subtitle %}
+    {% translate page.index.sections.lifestyle.subtitle %}
+{% endcapture %}
+
+{% include cards/startSectionCard.html title=section_lifestyle_title subtitle=section_lifestyle_subtitle %}
+    {% include cards/thumbnailPageCard.html code="qbpktM69P0aZVaqOr46t0A" %}
+{% include cards/endSectionCard.html %}
